# holocron-lsp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cog.toml  commitlint.config.mjs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  commitlint.yml  docs.yml  release.yml  scorecard.yml
src/: main.rs
